# raposos

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  GEMINI.md  docker-compose.yml  package-lock.json  package.json  test_e2e.sh  turbo.json
apps/api-gateway/: package.json
apps/api-gateway/src/: grpc.ts  index.ts  taxEngine.ts
apps/api-gateway/src/services/: turnkey.service.ts  turnkey_sign.service.ts
apps/web/: package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/contractors/: page.tsx
apps/web/src/app/invoices/: page.tsx
apps/web/src/app/payments/: page.tsx
apps/web/src/app/profile/: page.tsx
apps/web/src/app/tax/: page.tsx
apps/web/src/components/: DashboardActions.tsx  WithdrawModal.tsx
apps/web/src/components/onboarding/: OnboardingFlow.tsx  OnboardingGuard.tsx
apps/web/src/components/providers/: ClientProviders.tsx  ClientRoot.tsx  Web3Provider.tsx
apps/web/src/components/ui/: AppLayout.tsx
apps/web/src/hooks/: useOnboarding.ts
apps/web/src/lib/: formatAmount.ts  ledgerLabels.ts
apps/web/src/trpc/: react.tsx
services/chain-indexer/: Cargo.toml
services/chain-indexer/src/: main.rs
services/core-ledger/: Cargo.toml  build.rs
services/core-ledger/src/: amqp.rs  grpc.rs  main.rs
